--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="app_txt_red">#f56066</color>
     <color name="app_txt_black">#3d3d3d</color>
+    <color name="app_txt_gray">#999999</color>
     <color name="app_title_bg">#f56066</color>
 
 
