新增 邀请好友页面

--- a/app/src/main/res/drawable/app_shape_click_btn_un.xml
+++ b/app/src/main/res/drawable/app_shape_click_btn_un.xml
@@ -3,5 +3,5 @@
 
     <solid android:color="@color/btn_select_un" />
 
-    <corners android:radius="@dimen/shape_btn_radius" />
+    <corners android:radius="@dimen/app_btn_radius" />
 </shape>
