--- a/app/src/main/res/drawable/app_shape_click_btn.xml
+++ b/app/src/main/res/drawable/app_shape_click_btn.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/btn_select"/>
-    <corners android:radius="@dimen/shape_btn_radius" />
+    <corners android:radius="@dimen/app_btn_radius" />
 </shape>
