--- a/app/src/main/res/layout/fragment_first_page.xml
+++ b/app/src/main/res/layout/fragment_first_page.xml
@@ -15,7 +15,7 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="@dimen/top_center_title_size" />
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refreshLayout"
