--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="app_txt_black">#3d3d3d</color>
     <color name="app_txt_gray">#999999</color>
     <color name="app_title_bg">#f56066</color>
+    <color name="app_invitation_friend_yellow">#fdf9e7</color>
+    <color name="app_invitation_txt">#f56066</color>
 
 
 </resources>
