--- a/cdcommon/src/main/res/values/dimens.xml
+++ b/cdcommon/src/main/res/values/dimens.xml
@@ -27,5 +27,6 @@
     <dimen name="layout_left_interval">15dp</dimen>
     <dimen name="layout_right_interval">15dp</dimen>
     <dimen name="button_height">45dp</dimen>
+    <dimen name="shape_btn_radius">5dp</dimen>
 
 </resources>
