--- a/app/src/main/res/layout/layout_my_fragment_header.xml
+++ b/app/src/main/res/layout/layout_my_fragment_header.xml
@@ -48,7 +48,7 @@
                     android:layout_height="16dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
-                    tools:src="@drawable/woman" />
+                    tools:src="@drawable/women" />
 
             </LinearLayout>
 
