--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="app_title_bg">#f56066</color>
     <color name="app_invitation_friend_yellow">#fdf9e7</color>
     <color name="app_invitation_txt">#f56066</color>
+    <color name="shopper_lable_1">#f56066</color>
+    <color name="shopper_lable_2">#54e662</color>
+    <color name="shopper_lable_3">#ffbe00</color>
 
 
 </resources>
