--- a/cdcommon/src/main/res/layout/common_title_info.xml
+++ b/cdcommon/src/main/res/layout/common_title_info.xml
@@ -6,7 +6,7 @@
             android:id="@+id/fram_title"
             android:layout_width="match_parent"
             android:layout_height="@dimen/title_height"
-            android:background="@color/white">
+            android:background="@color/title_bg">
 
             <TextView
                 android:id="@+id/tv_top_title_abs"
@@ -15,7 +15,7 @@
                 android:layout_gravity="center"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textColor="@color/white"
+                android:textColor="@color/title_mid_tv"
                 android:textSize="@dimen/top_center_title_size"
                 tools:text="title" />
 
@@ -29,8 +29,8 @@
 
                 <ImageView
                     android:id="@+id/img_back"
-                    android:layout_width="13dp"
-                    android:layout_height="20dp"
+                    android:layout_width="@dimen/title_left_img_widht"
+                    android:layout_height="@dimen/title_left_img_height"
                     android:layout_gravity="center_vertical"
                     tools:src="@drawable/back_img"
                     android:visibility="gone" />
@@ -40,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/white"
+                    android:textColor="@color/title_left_tv"
                     android:textSize="16sp"
                     android:visibility="gone"
                     tools:text="返回" />
@@ -55,8 +55,8 @@
 
                 <ImageView
                     android:id="@+id/img_right"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="@dimen/title_img_right_width"
+                    android:layout_height="@dimen/title_img_right_height"
                     android:layout_gravity="center_vertical|right"
                     android:layout_marginRight="15dp"
                     android:visibility="gone"
@@ -70,7 +70,7 @@
                     android:layout_gravity="right|center_vertical"
                     android:layout_marginRight="15dp"
                     android:gravity="center"
-                    android:textColor="@color/white"
+                    android:textColor="@color/title_right_tv"
                     android:textSize="16sp"
                     android:visibility="gone"
                     tools:text="客服" />
