--- a/app/src/main/res/layout/layout_advice_header.xml
+++ b/app/src/main/res/layout/layout_advice_header.xml
@@ -31,10 +31,12 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:text="7.7"
                 android:textColor="@color/app_txt_red"
-                android:textSize="45sp" />
+                android:textSize="45sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -83,9 +85,9 @@
                         app:starCount="0"
                         app:starEmpty="@drawable/star_empty"
                         app:starFill="@drawable/star_full"
-                        app:starImageHeight="15dp"
-                        app:starImagePadding="3dp"
-                        app:starImageWidth="15dp"
+                        app:starImageHeight="@dimen/advice_ratingbar_width"
+                        app:starImagePadding="@dimen/advice_ratingbar_padding"
+                        app:starImageWidth="@dimen/advice_ratingbar_height"
                         app:starNum="5" />
 
                     <com.cdkj.myxb.views.MyRatingBar
@@ -97,10 +99,11 @@
                         app:starCount="0"
                         app:starEmpty="@drawable/star_empty"
                         app:starFill="@drawable/star_full"
-                        app:starImageHeight="15dp"
-                        app:starImagePadding="3dp"
-                        app:starImageWidth="15dp"
+                        app:starImageHeight="@dimen/advice_ratingbar_width"
+                        app:starImagePadding="@dimen/advice_ratingbar_padding"
+                        app:starImageWidth="@dimen/advice_ratingbar_height"
                         app:starNum="4" />
+
 
                     <com.cdkj.myxb.views.MyRatingBar
                         android:layout_width="wrap_content"
@@ -111,9 +114,9 @@
                         app:starCount="0"
                         app:starEmpty="@drawable/star_empty"
                         app:starFill="@drawable/star_full"
-                        app:starImageHeight="15dp"
-                        app:starImagePadding="3dp"
-                        app:starImageWidth="15dp"
+                        app:starImageHeight="@dimen/advice_ratingbar_width"
+                        app:starImagePadding="@dimen/advice_ratingbar_padding"
+                        app:starImageWidth="@dimen/advice_ratingbar_height"
                         app:starNum="3" />
 
                     <com.cdkj.myxb.views.MyRatingBar
@@ -125,10 +128,11 @@
                         app:starCount="0"
                         app:starEmpty="@drawable/star_empty"
                         app:starFill="@drawable/star_full"
-                        app:starImageHeight="15dp"
-                        app:starImagePadding="3dp"
-                        app:starImageWidth="15dp"
+                        app:starImageHeight="@dimen/advice_ratingbar_width"
+                        app:starImagePadding="@dimen/advice_ratingbar_padding"
+                        app:starImageWidth="@dimen/advice_ratingbar_height"
                         app:starNum="2" />
+
 
                     <com.cdkj.myxb.views.MyRatingBar
                         android:layout_width="wrap_content"
@@ -139,16 +143,18 @@
                         app:starCount="0"
                         app:starEmpty="@drawable/star_empty"
                         app:starFill="@drawable/star_full"
-                        app:starImageHeight="15dp"
-                        app:starImagePadding="3dp"
-                        app:starImageWidth="15dp"
+                        app:starImageHeight="@dimen/advice_ratingbar_width"
+                        app:starImagePadding="@dimen/advice_ratingbar_padding"
+                        app:starImageWidth="@dimen/advice_ratingbar_height"
                         app:starNum="1" />
+
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -162,8 +168,7 @@
                         <ProgressBar
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_height="@dimen/advice_progressbar_hegiht"
                             android:max="100"
                             android:progress="50"
                             android:progressDrawable="@drawable/shape_advice_progress" />
@@ -180,8 +185,7 @@
                         <ProgressBar
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_height="@dimen/advice_progressbar_hegiht"
                             android:max="100"
                             android:progress="50"
                             android:progressDrawable="@drawable/shape_advice_progress" />
@@ -197,8 +201,7 @@
                         <ProgressBar
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_height="@dimen/advice_progressbar_hegiht"
                             android:max="100"
                             android:progress="50"
                             android:progressDrawable="@drawable/shape_advice_progress" />
@@ -214,8 +217,7 @@
                         <ProgressBar
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_height="@dimen/advice_progressbar_hegiht"
                             android:max="100"
                             android:progress="50"
                             android:progressDrawable="@drawable/shape_advice_progress" />
@@ -231,18 +233,24 @@
                         <ProgressBar
                             style="@android:style/Widget.ProgressBar.Horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
-                            android:layout_marginLeft="10dp"
+                            android:layout_height="@dimen/advice_progressbar_hegiht"
                             android:max="100"
                             android:progress="50"
                             android:progressDrawable="@drawable/shape_advice_progress" />
 
                     </LinearLayout>
-
 
                 </LinearLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="186个评分"
+                android:textColor="@color/app_txt_gray"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
