--- a/app/src/main/res/layout/activity_shopper_appointment.xml
+++ b/app/src/main/res/layout/activity_shopper_appointment.xml
@@ -48,7 +48,7 @@
                         android:layout_weight="1"
                         android:text="行程档期"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
                     <ImageView
                         android:id="@+id/img_trip"
@@ -77,7 +77,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
-                    android:background="@color/white_50"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -94,7 +94,7 @@
                         android:layout_weight="1"
                         android:text="图文详情"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="12sp" />
+                        android:textSize="14sp" />
 
 
                 </LinearLayout>
