--- a/app/src/main/res/layout/item_advice.xml
+++ b/app/src/main/res/layout/item_advice.xml
@@ -36,7 +36,7 @@
                 android:textSize="14sp"
                 tools:text="2018-02-07" />
 
-            <com.cdkj.myxb.views.MyRatingBar
+            <com.cdkj.myxb.weight.views.MyRatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
