--- a/app/src/main/res/layout/item_shopper_appointment.xml
+++ b/app/src/main/res/layout/item_shopper_appointment.xml
@@ -139,7 +139,7 @@
                 </com.google.android.flexbox.FlexboxLayout>
 
 
-                <com.cdkj.myxb.views.MyRatingBar
+                <com.cdkj.myxb.weight.views.MyRatingBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
