--- a/app/src/main/res/layout/activity_shopper_appointment.xml
+++ b/app/src/main/res/layout/activity_shopper_appointment.xml
@@ -62,7 +62,7 @@
 
                 <View style="@style/style_split_line" />
 
-                <com.cdkj.myxb.views.TripDateView
+                <com.cdkj.myxb.weight.views.TripDateView
                     android:id="@+id/trip_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
-                    <com.cdkj.myxb.views.MyRatingBar
+                    <com.cdkj.myxb.weight.views.MyRatingBar
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
