--- a/app/src/main/res/layout/fragment_help_center.xml
+++ b/app/src/main/res/layout/fragment_help_center.xml
@@ -43,7 +43,7 @@
             </FrameLayout>
 
 
-            <com.cdkj.myxb.views.HelpItemShowAndHideLayout
+            <com.cdkj.myxb.weight.views.HelpItemShowAndHideLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:img_left="@drawable/help_center_1"
@@ -55,7 +55,7 @@
                 android:layout_marginLeft="55dp" />
 
 
-            <com.cdkj.myxb.views.HelpItemShowAndHideLayout
+            <com.cdkj.myxb.weight.views.HelpItemShowAndHideLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:img_left="@drawable/help_center_2"
@@ -67,7 +67,7 @@
                 android:layout_marginLeft="55dp" />
 
 
-            <com.cdkj.myxb.views.HelpItemShowAndHideLayout
+            <com.cdkj.myxb.weight.views.HelpItemShowAndHideLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:img_left="@drawable/help_center_3"
@@ -78,7 +78,7 @@
                 style="@style/style_split_line"
                 android:layout_marginLeft="55dp" />
 
-            <com.cdkj.myxb.views.HelpItemShowAndHideLayout
+            <com.cdkj.myxb.weight.views.HelpItemShowAndHideLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:img_left="@drawable/help_center_4"
