新增 产品详情界面

--- a/app/src/main/res/layout/layout_frist_page_headr.xml
+++ b/app/src/main/res/layout/layout_frist_page_headr.xml
@@ -67,6 +67,7 @@
             android:paddingTop="10dp">
 
             <LinearLayout
+                android:id="@+id/llayout_brand"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
