--- a/app/src/main/res/layout/activity_shopper_appointment.xml
+++ b/app/src/main/res/layout/activity_shopper_appointment.xml
@@ -111,55 +111,9 @@
 
                 </WebView>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <com.cdkj.myxb.weight.views.MyRatingBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        app:clickable="true"
-                        app:halfstart="false"
-                        app:starCount="5"
-                        app:starEmpty="@drawable/star_empty"
-                        app:starFill="@drawable/star_full"
-                        app:starImageHeight="25dp"
-                        app:starImagePadding="8dp"
-                        app:starImageWidth="25dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="0星"
-                        android:textColor="@color/ratingbar_color"
-                        android:textSize="14sp" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="42条评论"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
-
-
-                    <ImageView
-                        android:layout_width="12dp"
-                        android:layout_height="12dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="@dimen/layout_right_interval"
-                        android:src="@drawable/more_right" />
-
-                </LinearLayout>
+                <include
+                    android:id="@+id/score_layout"
+                    layout="@layout/layout_score" />
 
 
             </LinearLayout>
