--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="advice_ratingbar_height">12.5dp</dimen>
     <dimen name="advice_ratingbar_padding">3dp</dimen>
     <dimen name="advice_progressbar_hegiht">2dp</dimen>
+    <dimen name="product_details_banner_height">350dp</dimen>
+    <dimen name="product_bottom_height">50dp</dimen>
+    <dimen name="product_title_margintop">5dp</dimen>
 </resources>
