--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -39,6 +39,7 @@
                 android:layout_marginLeft="15dp" />
 
             <com.cdkj.baselibrary.views.RowInfoLayout
+                android:id="@+id/row_my_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:img_left="@drawable/my_results"
