--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="app_txt_gray">#999999</color>
     <color name="app_title_bg">#f56066</color>
     <color name="app_invitation_friend_yellow">#fdf9e7</color>
+    <color name="integral_yellow">#ffbe00</color>
     <color name="app_invitation_txt">#f56066</color>
     <color name="shopper_lable_1">#f56066</color>
     <color name="shopper_lable_2">#54e662</color>
