--- a/app/src/main/res/layout/layout_my_fragment_header.xml
+++ b/app/src/main/res/layout/layout_my_fragment_header.xml
@@ -12,12 +12,27 @@
         android:background="@drawable/my_fra_bg"
         android:paddingLeft="@dimen/layout_left_interval">
 
-        <ImageView
-            android:id="@+id/img_user_logo"
+        <FrameLayout
+
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/my_logo" />
+            android:layout_marginLeft="10dp">
+
+            <ImageView
+                android:id="@+id/img_user_logo"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:src="@drawable/my_logo" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="right|bottom"
+                tools:src="@drawable/women" />
+
+        </FrameLayout>
 
 
         <LinearLayout
@@ -27,30 +42,16 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    tools:text="王小二" />
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
-                    tools:src="@drawable/women" />
-
-            </LinearLayout>
+                android:layout_marginLeft="15dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                tools:text="王小二" />
 
             <TextView
                 android:id="@+id/tv_user_type"
