--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp">
+                android:layout_marginTop="40dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="22dp"
@@ -51,7 +52,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp">
+                android:layout_marginTop="32dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="22dp"
@@ -66,7 +68,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="20dp"
                     android:background="@null"
-                    android:hint="请输入账号密码"
+                    android:hint="请输入密码"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:textColorHint="@color/text_hint_color"
@@ -83,6 +85,47 @@
                 android:layout_marginTop="13dp"
                 android:background="@color/gray" />
 
+            <LinearLayout
+                android:id="@+id/lin_login_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/phone_login" />
+
+                <TextView
+                    android:id="@+id/tv_logintype"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@null"
+                    android:hint="请选择登录角色"
+                    android:maxLines="1"
+                    android:textColorHint="@color/text_hint_color"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/more_right" />
+
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
@@ -95,12 +138,13 @@
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
+
             <FrameLayout
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp">
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp">
 
                 <TextView
                     android:id="@+id/tv_start_registr"
