--- a/app/src/main/res/layout/layout_my.xml
+++ b/app/src/main/res/layout/layout_my.xml
@@ -5,12 +5,14 @@
     tools:showIn="@layout/fragment_my">
 
     <LinearLayout
+        android:id="@+id/lin_my"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
 
         <com.cdkj.baselibrary.views.RowInfoLayout
+            android:id="@+id/row_integral"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:img_left="@drawable/my_jf"
