--- a/app/src/main/res/layout/layout_my_fragment_header.xml
+++ b/app/src/main/res/layout/layout_my_fragment_header.xml
@@ -27,6 +27,7 @@
                 android:src="@drawable/my_logo" />
 
             <ImageView
+                android:id="@+id/img_gender"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="right|bottom"
