--- a/app/src/main/res/layout/item_integral_product.xml
+++ b/app/src/main/res/layout/item_integral_product.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
 
         <ImageView
+            android:id="@+id/img_integra"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
@@ -19,6 +21,7 @@
 
 
         <TextView
+            android:id="@+id/tv_integra"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_marginTop="5dp"
@@ -35,6 +38,7 @@
     </FrameLayout>
 
     <TextView
+        android:id="@+id/tv_integra_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -47,12 +51,13 @@
         android:textSize="14sp"
         tools:text="sdfsdfsdfsfsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsfd" />
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/btn_select_common"
+        android:gravity="center"
         android:text="@string/i_want_change"
         android:textColor="@color/white" />
 
