--- a/app/src/main/res/layout/layout_integral_mall_header.xml
+++ b/app/src/main/res/layout/layout_integral_mall_header.xml
@@ -67,9 +67,10 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/tv_myintegral"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:ellipsize="end"
                     android:singleLine="true"
@@ -83,7 +84,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/img_right"
+            android:id="@+id/tv_integral_rules"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
