--- a/app/src/main/res/layout/activity_integral_list.xml
+++ b/app/src/main/res/layout/activity_integral_list.xml
@@ -13,7 +13,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_jfnum"
+                android:id="@+id/tv_num"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:background="@color/app_title_bg"
