--- a/app/src/main/res/layout/activity_integral_mall.xml
+++ b/app/src/main/res/layout/activity_integral_mall.xml
@@ -1,40 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/bg_gray"
+        app:srlAccentColor="@android:color/tertiary_text_dark"
+        app:srlEnablePreviewInEditMode="true"
+        app:srlPrimaryColor="@color/bg_gray">
 
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@color/white">
 
-            <include
-                android:id="@+id/layout_mall_header"
-                layout="@layout/layout_integral_mall_header" />
 
-            <View style="@style/style_split_line" />
-
-            <include layout="@layout/layout_integral_order" />
-
-            <View
-                style="@style/style_split_line"
-                android:layout_height="10dp" />
-
-            <android.support.v7.widget.RecyclerView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:overScrollMode="never">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <include
+                    android:id="@+id/layout_mall_header"
+                    layout="@layout/layout_integral_mall_header" />
+
+                <View style="@style/style_split_line" />
+
+                <include
+                    android:id="@+id/order_layout"
+                    layout="@layout/layout_integral_order" />
+
+                <View
+                    style="@style/style_split_line"
+                    android:layout_height="10dp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerView_integral"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="7dp"
+                        android:layout_marginTop="10dp"
+                        >
+                    </android.support.v7.widget.RecyclerView>
+                </RelativeLayout>
 
 
-            </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </ScrollView>
 
-
-    </ScrollView>
-
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </layout>
