--- a/app/src/main/res/layout/activity_integral_product_details.xml
+++ b/app/src/main/res/layout/activity_integral_product_details.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <ScrollView
@@ -13,14 +14,13 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <com.youth.banner.Banner
-                    android:id="@+id/banner_first_page"
+                    android:id="@+id/banner_integral"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/product_details_banner_height"
                     banner:delay_time="4000"
@@ -31,15 +31,16 @@
                     banner:indicator_width="8dp" />
 
                 <TextView
+                    android:id="@+id/tv_integral_slogan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:paddingLeft="@dimen/layout_left_interval"
                     android:progress="@dimen/layout_right_interval"
-                    android:text="shangpsdfe"
                     android:textColor="@color/app_txt_black"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:text="shangpsdfe" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -58,6 +59,7 @@
                             android:src="@drawable/integral" />
 
                         <TextView
+                            android:id="@+id/tv_integral_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="12dp"
@@ -83,6 +85,7 @@
                             android:textColor="@color/app_txt_gray" />
 
                         <TextView
+                            android:id="@+id/tv_integral_quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="12dp"
@@ -105,6 +108,7 @@
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/tv_integral_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
@@ -113,14 +117,15 @@
                     android:textColor="@color/app_txt_black"
                     android:textSize="14sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:id="@+id/lin_webView"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="30dp"
-                    android:text="兑换流程"
-                    android:textColor="@color/app_txt_black"
-                    android:textSize="15sp" />
+                    android:layout_marginTop="10dp">
+
+                </LinearLayout>
+
 
                 <View
                     style="@style/style_split_line"
@@ -137,6 +142,7 @@
             android:paddingTop="5dp">
 
             <Button
+                android:id="@+id/btn_want_change"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
