--- a/app/src/main/res/layout/layout_integral_order.xml
+++ b/app/src/main/res/layout/layout_integral_order.xml
@@ -13,8 +13,9 @@
     >
 
         <FrameLayout
+            android:id="@+id/fra_integral_order"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:orientation="horizontal">
@@ -51,8 +52,9 @@
             android:layout_marginTop="5dp" />
 
         <FrameLayout
+            android:id="@+id/fra_integral_list"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:orientation="horizontal">
