新增 订单积分评论

--- a/app/src/main/res/layout/activity_integral_order_details.xml
+++ b/app/src/main/res/layout/activity_integral_order_details.xml
@@ -52,28 +52,6 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:text="所属品牌"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="产品名称"
-                        android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
-
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -82,7 +60,6 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_price"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:text="产品单价"
@@ -90,11 +67,12 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="产品名称"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
 
 
                 </LinearLayout>
@@ -116,9 +94,9 @@
                         android:id="@+id/tv_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="产品名称"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
 
 
                 </LinearLayout>
@@ -140,9 +118,9 @@
                         android:id="@+id/tv_order_code"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="产品名称"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
 
 
                 </LinearLayout>
@@ -161,11 +139,12 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_order_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="产品名称"
                         android:textColor="@color/app_txt_black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
 
 
                 </LinearLayout>
@@ -187,15 +166,83 @@
                         android:id="@+id/tv_state"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="产品名称"
+                        android:textColor="@color/app_txt_red"
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/lin_logisticscompany"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:text="物流公司"
                         android:textColor="@color/app_txt_black"
                         android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tv_logisticscompany"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/app_txt_black"
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lin_logisticscode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:text="物流单号"
+                        android:textColor="@color/app_txt_black"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tv_logisticscode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/app_txt_red"
+                        android:textSize="14sp"
+                        tools:text="产品名称" />
 
 
                 </LinearLayout>
 
 
             </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btn_state_do"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="@dimen/layout_left_interval"
+                android:layout_marginRight="@dimen/layout_right_interval"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/btn_select_common"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:visibility="gone"
+                tools:text="确认收获" />
 
 
         </LinearLayout>
