--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txt_orderId"
+                android:id="@+id/tv_orderId"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -32,7 +32,7 @@
                 tools:text="订单编号：" />
 
             <TextView
-                android:id="@+id/txt_time"
+                android:id="@+id/tv_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
@@ -57,7 +57,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
                 android:scaleType="centerCrop"
-                tools:src="@mipmap/ic_launcher" />
+                android:src="@drawable/default_pic" />
 
 
             <LinearLayout
@@ -93,6 +93,7 @@
                             tools:text="20172017201720172017201720172017" />
 
                         <TextView
+                            android:id="@+id/tv_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -128,11 +129,12 @@
                             android:id="@+id/tv_quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="right"
                             android:layout_marginTop="10dp"
                             android:gravity="right"
+                            android:text="X1"
                             android:textColor="@color/app_txt_black"
-                            android:textSize="16sp"
-                            tools:text="X1" />
+                            android:textSize="16sp" />
 
 
                     </LinearLayout>
@@ -149,7 +151,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginRight="8dp"
                         android:layout_marginTop="10dp"
                         android:gravity="right"
                         android:text="总价:"
@@ -161,7 +163,6 @@
                         android:id="@+id/tv_price_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="15dp"
                         android:layout_marginTop="10dp"
                         android:gravity="right"
                         android:textColor="@color/app_txt_red"
@@ -179,10 +180,12 @@
             android:layout_marginTop="10dp" />
 
         <LinearLayout
+            android:id="@+id/lin_buttom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="10dp">
+            android:paddingBottom="10dp"
+            android:visibility="gone">
 
             <View
                 android:layout_width="0dp"
@@ -191,7 +194,7 @@
 
 
             <TextView
-                android:id="@+id/tv_cancel_order"
+                android:id="@+id/tv_state_do"
                 android:layout_width="95dp"
                 android:layout_height="35dp"
                 android:layout_marginRight="15dp"
