--- a/app/src/main/res/layout/layout_order_details_header.xml
+++ b/app/src/main/res/layout/layout_order_details_header.xml
@@ -54,6 +54,7 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
+                    android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
@@ -68,7 +69,7 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:id="@+id/tv_price"
+                    android:id="@+id/tv_num"
                     style="@style/text_black"
                     android:layout_gravity="bottom"
                     tools:text="X1" />
