新增 积分订单确认收货

--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -193,7 +193,7 @@
                 android:layout_weight="1" />
 
 
-            <TextView
+            <Button
                 android:id="@+id/tv_state_do"
                 android:layout_width="95dp"
                 android:layout_height="35dp"
